using common card layout in a common xml file for both favorites and detail

--- a/app/src/main/res/layout/commodity_card_row_more.xml
+++ b/app/src/main/res/layout/commodity_card_row_more.xml
@@ -2,54 +2,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/card_layout_margin">
 
     <TextView
-        android:id="@+id/text_market"
+        android:id="@+id/text_variety_and_or_market"
         style="@style/CardFirstRowText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintRight_toLeftOf="@+id/text_modal_price"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Chirala market" />
-
-    <TextView
-        android:id="@+id/text_modal_price"
-        style="@style/CardPriceHeaderAndPrice"
-        android:layout_width="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/text_market"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="\u20B9 3950" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Arecal betlanut  long long long long  long long long long  long long long long  long long long long" />
 
     <TextView
-        android:id="@+id/text_district"
+        android:id="@+id/text_unit_price"
+        style="@style/CardPriceUnit"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_modal_price" />
+
+    <TextView
+        android:id="@+id/text_market_and_or_district"
         style="@style/CardSecondRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/text_market"
-        tools:text="Prakasam district"
-        app:layout_constraintRight_toLeftOf="@+id/text_unit_price" />
-
+        app:layout_constraintRight_toLeftOf="@+id/text_unit_price"
+        app:layout_constraintTop_toBottomOf="@+id/text_variety_and_or_market"
+        tools:text="Chirala market, Prakasam district lonwer" />
 
     <TextView
         android:id="@+id/text_state_name"
         style="@style/CardThirdRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintRight_toLeftOf="@+id/text_unit_price"
-        app:layout_constraintTop_toBottomOf="@+id/text_district"
+        app:layout_constraintTop_toBottomOf="@+id/text_market_and_or_district"
         tools:text="Andhra Pradesh" />
 
     <TextView
-        android:id="@+id/text_unit_price"
-        style="@style/CardPriceUnit"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
-        android:text="@string/unit_of_price" />
+        android:id="@+id/text_modal_price"
+        style="@style/CardPriceHeaderAndPrice"
+        app:layout_constraintStart_toStartOf="@+id/text_min_price"
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
+        tools:text="\u20B9 3950 per 100kg*" />
 
     <TextView
         android:id="@+id/header_modal_price"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         android:text="@string/modal_price_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
@@ -58,7 +53,6 @@
 
     <TextView
         android:id="@+id/header_min_price"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         android:text="@string/min_price_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_min_price"
@@ -66,7 +60,6 @@
 
     <TextView
         android:id="@+id/text_min_price"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -76,7 +69,6 @@
 
     <TextView
         android:id="@+id/header_max_price"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         android:text="@string/max_price_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_max_price"
@@ -85,7 +77,6 @@
 
     <TextView
         android:id="@+id/text_max_price"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintStart_toStartOf="@+id/text_min_price"
         app:layout_constraintTop_toBottomOf="@+id/text_min_price"
@@ -93,7 +84,6 @@
 
     <TextView
         android:id="@+id/header_arrival"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         android:text="@string/arrival_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_arrival_date"
@@ -102,7 +92,6 @@
 
     <TextView
         android:id="@+id/text_arrival_date"
-        android:visibility="gone"
         style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintStart_toStartOf="@+id/text_max_price"
         app:layout_constraintTop_toBottomOf="@+id/text_max_price"
@@ -117,7 +106,7 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name" />
+        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date" />
 
     <TextView
         android:id="@+id/favorite_icon"
@@ -148,5 +137,6 @@
         app:layout_constraintGuide_begin="16dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="0dp" />
+
 
 </android.support.constraint.ConstraintLayout>
