--- a/app/src/main/res/layout/activity_commodity_detail.xml
+++ b/app/src/main/res/layout/activity_commodity_detail.xml
@@ -25,9 +25,11 @@
                 style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:fontFamily="@font/nunito"
                 android:textColor="@android:color/white"
-                tools:text="Toolbar Title" />
+                android:textSize="22sp"
+                android:textStyle="bold"
+                tools:text="Rice" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
