--- a/app/src/main/res/layout/commodity_detail_card_header_variety.xml
+++ b/app/src/main/res/layout/commodity_detail_card_header_variety.xml
@@ -14,6 +14,7 @@
     android:paddingStart="16dp"
     android:paddingTop="8dp"
     android:textAppearance="@style/TextAppearance.AppCompat.Large"
+    android:fontFamily="@font/nunito"
     android:textSize="20sp"
     tools:text="American variety" />
 
