--- a/app/src/main/res/layout/commodity_recycler_view.xml
+++ b/app/src/main/res/layout/commodity_recycler_view.xml
@@ -18,5 +18,6 @@
         android:gravity="center"
         android:visibility="gone"
         tools:visibility="visible"
+        android:fontFamily="@font/nunito"
         android:text="Price list not loaded yet" />
 </merge>
