--- a/app/src/main/res/layout/favorites_list.xml
+++ b/app/src/main/res/layout/favorites_list.xml
@@ -36,6 +36,7 @@
             android:layout_marginStart="56dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
+            android:fontFamily="@font/nunito"
             android:text="@string/bookmark_empty"
             android:textAppearance="@style/TextAppearance.AppCompat.Small" />
     </LinearLayout>
