--- a/app/src/main/res/layout/share_card.xml
+++ b/app/src/main/res/layout/share_card.xml
@@ -107,6 +107,7 @@
         android:text="@string/share_marketing"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/teal_700"
+        android:fontFamily="@font/nunito"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_arrival_date" />
 
@@ -121,6 +122,7 @@
         android:text="@string/intro_1_desc"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/teal_700"
+        android:fontFamily="@font/nunito"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/evlo_promo_title" />
 
