--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,6 +49,7 @@
         parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">@dimen/search_title_text_size</item>
         <item name="android:textColor">#a0000000</item>
+        <item name="android:fontFamily">@font/nunito</item>
     </style>
 
     <style name="SearchToolbar_Container">
@@ -60,7 +61,7 @@
         <item name="colorButtonNormal">@color/triad_market_blue_bg</item>
     </style>
 
-    <style name="CardActionTextBtn" parent="AppTheme">
+    <style name="CardActionTextBtn" parent="@style/TextAppearance.AppCompat.Subhead">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
@@ -69,13 +70,13 @@
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/card_action_button_padding</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/light_grey</item>
+        <item name="android:fontFamily">@font/nunito</item>
     </style>
 
-    <style name="CardFirstRowText" parent="AppTheme">
+    <style name="CardFirstRowText" parent="@style/TextAppearance.AppCompat.Subhead">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">8dp</item>
@@ -85,11 +86,11 @@
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingRight">24dp</item>
         <item name="android:paddingStart">0dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/nunito</item>
     </style>
 
-    <style name="CardSecondRowText" parent="AppTheme">
+    <style name="CardSecondRowText" parent="@style/TextAppearance.AppCompat.Body1">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">4dp</item>
@@ -98,10 +99,10 @@
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingStart">0dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:fontFamily">@font/nunito</item>
     </style>
 
-    <style name="CardThirdRowText" parent="AppTheme">
+    <style name="CardThirdRowText" parent="@style/TextAppearance.AppCompat.Small">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">end</item>
@@ -111,23 +112,23 @@
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingStart">0dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+        <item name="android:fontFamily">@font/nunito</item>
     </style>
 
-    <style name="CardPriceUnit" parent="AppTheme">
+    <style name="CardPriceUnit" parent="@style/TextAppearance.AppCompat.Small">
         <item name="android:text">@string/unit_of_price</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:layout_marginRight">8dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+        <item name="android:fontFamily">@font/nunito_extralight</item>
     </style>
 
-    <style name="CardPriceHeaderAndPrice" parent="AppTheme">
+    <style name="CardPriceHeaderAndPrice" parent="@style/TextAppearance.AppCompat.Body1">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:fontFamily">@font/nunito</item>
         <item name="android:layout_marginTop">4dp</item>
     </style>
 
