added a minimum time visible progress bar

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -44,7 +44,7 @@
             tools:text='No search results for "Apple"'
             tools:visibility="visible" />
 
-        <ProgressBar
+        <android.support.v4.widget.ContentLoadingProgressBar
             android:id="@+id/progressBarSearch"
             android:layout_marginTop="40dp"
             style="?android:attr/progressBarStyle"
