new launcher and image compression

--- a/app/src/main/res/drawable/launch_background.xml
+++ b/app/src/main/res/drawable/launch_background.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:opacity="opaque">
     <!-- The background color, preferably the same as your normal theme -->
-    <item android:drawable="@color/teal_700"/>
+    <item android:drawable="@color/white"/>
     <!-- TODO - 144dp color version of your app icon -->
     <item>
         <bitmap
-            android:src="@mipmap/ic_launcher_foreground"
+            android:src="@drawable/foreground_inner"
             android:gravity="center" />
     </item>
 </layer-list>
