--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto/android">
 
-  <item android:id="@+id/faq"
+    <item android:id="@+id/faq"
       android:icon="@drawable/ic_question_24dp_vd"
       android:title="@string/faq"
-      app:showAsAction="always" />
-
+      app:showAsAction="ifRoom" />
+    <item android:id="@+id/disclaimer"
+        android:title="@string/disclaimer"
+        app:showAsAction="never" />
 </menu>
