--- a/app/src/main/res/layout/share_card.xml
+++ b/app/src/main/res/layout/share_card.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="4dp"
     android:layout_margin="@dimen/card_layout_margin">
 
     <TextView
@@ -97,34 +98,30 @@
         app:layout_constraintTop_toBottomOf="@+id/text_max_price"
         tools:text="30/05/2017" />
 
+    <ImageView
+        android:id="@+id/launcher"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/evlo_promo_title"
+        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date"
+        app:srcCompat="@drawable/foreground_inner" />
+
     <TextView
         android:id="@+id/evlo_promo_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:fontFamily="@font/nunito"
         android:text="@string/share_marketing"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/teal_700"
-        android:fontFamily="@font/nunito"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/launcher"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date" />
+        app:layout_constraintTop_toTopOf="@+id/launcher" />
 
-    <TextView
-        android:id="@+id/evlo_promo_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="2dp"
-        android:paddingBottom="2dp"
-        android:text="@string/intro_1_desc"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/teal_700"
-        android:fontFamily="@font/nunito"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/evlo_promo_title" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
