--- a/app/src/main/res/layout/fragment_commodity_detail.xml
+++ b/app/src/main/res/layout/fragment_commodity_detail.xml
@@ -11,4 +11,12 @@
         app:layoutManager="LinearLayoutManager"
         android:background="@android:color/white"
         tools:listitem="@layout/commodity_card_row" />
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
 </FrameLayout>
