own white instead of android white

--- a/app/src/main/res/layout/fragment_commodity_detail.xml
+++ b/app/src/main/res/layout/fragment_commodity_detail.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        android:background="@android:color/white"
+        android:background="@color/white"
         tools:listitem="@layout/commodity_card_row" />
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
