add admob ids and firebase analytics

--- a/app/src/main/res/layout/favorites_list.xml
+++ b/app/src/main/res/layout/favorites_list.xml
@@ -22,7 +22,7 @@
         android:orientation="vertical"
         tools:visibility="visible">
 
-        <android.support.v7.widget.AppCompatImageView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_empty_bookmark" />
@@ -49,4 +49,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:visibility="gone"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/AD_FAVORITES_SCREEN_UNIT_ID" />
 </FrameLayout>
