--- a/app/src/main/res/layout/fragment_commodity_detail.xml
+++ b/app/src/main/res/layout/fragment_commodity_detail.xml
@@ -18,5 +18,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         ads:adSize="SMART_BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
+        ads:adUnitId="@string/AD_DETAIL_SCREEN_UNIT_ID" />
 </FrameLayout>
