the empty favorites state is updated

--- a/app/src/main/res/layout/favorites_list.xml
+++ b/app/src/main/res/layout/favorites_list.xml
@@ -35,10 +35,11 @@
             android:layout_marginRight="56dp"
             android:layout_marginStart="56dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/nunito_extralight"
             android:gravity="center"
-            android:fontFamily="@font/nunito"
             android:text="@string/bookmark_empty"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <ProgressBar
