--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,7 @@
     <item android:id="@+id/disclaimer"
         android:title="@string/disclaimer"
         app:showAsAction="never" />
+    <item android:id="@+id/sendFeedback"
+        android:title="@string/send_feedback"
+        app:showAsAction="never" />
 </menu>
