--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
     <FrameLayout
         android:id="@+id/main_fragment_container"
-        android:background="@android:color/white"
+        android:background="@color/white"
         style="@style/container_tablet_constrain"
         tools:background="@color/cardview_shadow_start_color"/>
 </LinearLayout>
