make ads only visible if ad loading is successful and we have data

--- a/app/src/main/res/layout/fragment_commodity_detail.xml
+++ b/app/src/main/res/layout/fragment_commodity_detail.xml
@@ -19,6 +19,8 @@
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        tools:visibility="visible"
+        android:visibility="gone"
         ads:adSize="SMART_BANNER"
         ads:adUnitId="@string/AD_DETAIL_SCREEN_UNIT_ID" />
 </LinearLayout>
